fix scrolling on mobile

--- a/styles/maxWidth1000.css
+++ b/styles/maxWidth1000.css
@@ -2,7 +2,6 @@
     html {
         font-size: 10px;
     }
-    html,
     body {
         overflow-x: hidden;
     }
